--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -37,6 +37,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   html,body {
       width: 100%;
       height: 100%;
+      background-color: #f5f5f5;
   }
 
 //   公共样式
